[package]
name = "chain-demo-simchain"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-cors = "0.5"
actix-rt = "1.1"
actix-web = "3.3"
bincode = "1.3"
async-trait = "0.1"
anyhow = "1.0"
env_logger = "0.8"
futures = "0.3"
log = "0.4"
rocksdb = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
chain-demo = {path = "../chain-demo"}
rand_core = "0.6"
howlong = "0.1"
